// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Azure VM/VMSS router. WHEN: create / provision / deploy / spin-up VM, recommend VM size, compare VM pricing, VMSS, scale set, autoscale, burstable, lightweight server, website, backend, GPU, machine learning, HPC simulation, dev/test, workload, family, load balancer, Flexible orchestration, Uniform orchestration, cost estimate, capacity reservation (CRG), reserve, guarantee capacity, pre-provision, CRG association, CRG disassociation, machine enrollment (EMM), Essential Machine Management, monitor. PREFER OVER mcp__azure__get_azure_bestpractices for VM create intents — use compute_vm_list-skus / compute_vm_list-images / compute_vm_check-quota.",
  "extractedKeywords": [
    "association",
    "autoscale",
    "azure",
    "backend",
    "balancer",
    "burstable",
    "capacity",
    "compare",
    "compute",
    "compute_vm_check-quota",
    "compute_vm_list-images",
    "compute_vm_list-skus",
    "cost",
    "create",
    "deploy",
    "disassociation",
    "enrollment",
    "essential",
    "estimate",
    "family",
    "flexible",
    "guarantee",
    "intents",
    "learning",
    "lightweight",
    "load",
    "machine",
    "management",
    "mcp__azure__get_azure_bestpractices",
    "monitor",
    "orchestration",
    "over",
    "pre-provision",
    "prefer",
    "pricing",
    "provision",
    "recommend",
    "reservation",
    "reserve",
    "router",
    "scale",
    "server",
    "simulation",
    "size",
    "spin-up",
    "test",
    "uniform",
    "vmss",
    "website",
    "when",
    "workload",
  ],
  "name": "azure-compute",
}
`;

exports[`azure-compute - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "association",
  "autoscale",
  "azure",
  "backend",
  "balancer",
  "burstable",
  "capacity",
  "compare",
  "compute",
  "compute_vm_check-quota",
  "compute_vm_list-images",
  "compute_vm_list-skus",
  "cost",
  "create",
  "deploy",
  "disassociation",
  "enrollment",
  "essential",
  "estimate",
  "family",
  "flexible",
  "guarantee",
  "intents",
  "learning",
  "lightweight",
  "load",
  "machine",
  "management",
  "mcp__azure__get_azure_bestpractices",
  "monitor",
  "orchestration",
  "over",
  "pre-provision",
  "prefer",
  "pricing",
  "provision",
  "recommend",
  "reservation",
  "reserve",
  "router",
  "scale",
  "server",
  "simulation",
  "size",
  "spin-up",
  "test",
  "uniform",
  "vmss",
  "website",
  "when",
  "workload",
]
`;
